[package]
name = "yieldomega-indexer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Offchain read-model indexer for YieldOmega (MegaETH)"

[lib]
name = "yieldomega_indexer"
path = "src/lib.rs"

[[bin]]
name = "yieldomega-indexer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Postgres (compile-time checked queries disabled until schema stabilises)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }

# HTTP API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Ethereum primitives — kept minimal; full ABI codegen waits for contract ABIs
alloy-primitives = "0.8"

# Configuration and environment
dotenvy = "0.15"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
eyre = "0.6"
color-eyre = "0.6"
alloy-sol-types = "0.8"
alloy-provider = "0.8"
alloy-rpc-types = "0.8"
alloy-transport-http = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
axum = "0.8"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
